; ModuleID = '/home/carl/AnghaBench/esp-idf/components/bt/host/bluedroid/stack/l2cap/extr_l2c_ble.c_l2cble_process_conn_update_evt.c'
source_filename = "/home/carl/AnghaBench/esp-idf/components/bt/host/bluedroid/stack/l2cap/extr_l2c_ble.c_l2cble_process_conn_update_evt.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.TYPE_8__ = type { i32* }
%struct.TYPE_7__ = type { i32, i32, i32, i8*, i8*, i8* }

@.str = private unnamed_addr constant [51 x i8] c"l2cble_process_conn_update_evt: Invalid handle: %d\00", align 1
@HCI_SUCCESS = common dso_local global i8* null, align 8
@.str.1 = private unnamed_addr constant [49 x i8] c"l2cble_process_conn_update_evt: Error status: %d\00", align 1
@L2C_BLE_UPDATE_PENDING = common dso_local global i32 0, align 4
@L2C_BLE_UPDATE_PARAM_FULL = common dso_local global i32 0, align 4
@conn_param_update_cb = common dso_local global %struct.TYPE_8__ zeroinitializer, align 8
@TRUE = common dso_local global i64 0, align 8
@BTU_TTYPE_L2CAP_UPDA_CONN_PARAMS = common dso_local global i32 0, align 4
@.str.2 = private unnamed_addr constant [52 x i8] c"l2cble_process_conn_update_evt: conn_update_mask=%d\00", align 1

; Function Attrs: noinline nounwind optnone uwtable
define dso_local void @l2cble_process_conn_update_evt(i8* %0, i8* %1, i8* %2, i8* %3, i8* %4) #0 {
  %6 = alloca i8*, align 8
  %7 = alloca i8*, align 8
  %8 = alloca i8*, align 8
  %9 = alloca i8*, align 8
  %10 = alloca i8*, align 8
  %11 = alloca %struct.TYPE_7__*, align 8
  %12 = alloca i32, align 4
  store i8* %0, i8** %6, align 8
  store i8* %1, i8** %7, align 8
  store i8* %2, i8** %8, align 8
  store i8* %3, i8** %9, align 8
  store i8* %4, i8** %10, align 8
  %13 = load i8*, i8** %6, align 8
  %14 = call %struct.TYPE_7__* @l2cu_find_lcb_by_handle(i8* %13)
  store %struct.TYPE_7__* %14, %struct.TYPE_7__** %11, align 8
  %15 = load %struct.TYPE_7__*, %struct.TYPE_7__** %11, align 8
  %16 = icmp ne %struct.TYPE_7__* %15, null
  br i1 %16, label %20, label %17

17:                                               ; preds = %5
  %18 = load i8*, i8** %6, align 8
  %19 = call i32 @L2CAP_TRACE_WARNING(i8* getelementptr inbounds ([51 x i8], [51 x i8]* @.str, i64 0, i64 0), i8* %18)
  br label %80

20:                                               ; preds = %5
  %21 = load i8*, i8** %7, align 8
  %22 = load i8*, i8** @HCI_SUCCESS, align 8
  %23 = icmp eq i8* %21, %22
  br i1 %23, label %24, label %34

24:                                               ; preds = %20
  %25 = load i8*, i8** %8, align 8
  %26 = load %struct.TYPE_7__*, %struct.TYPE_7__** %11, align 8
  %27 = getelementptr inbounds %struct.TYPE_7__, %struct.TYPE_7__* %26, i32 0, i32 5
  store i8* %25, i8** %27, align 8
  %28 = load i8*, i8** %9, align 8
  %29 = load %struct.TYPE_7__*, %struct.TYPE_7__** %11, align 8
  %30 = getelementptr inbounds %struct.TYPE_7__, %struct.TYPE_7__* %29, i32 0, i32 4
  store i8* %28, i8** %30, align 8
  %31 = load i8*, i8** %10, align 8
  %32 = load %struct.TYPE_7__*, %struct.TYPE_7__** %11, align 8
  %33 = getelementptr inbounds %struct.TYPE_7__, %struct.TYPE_7__* %32, i32 0, i32 3
  store i8* %31, i8** %33, align 8
  br label %37

34:                                               ; preds = %20
  %35 = load i8*, i8** %7, align 8
  %36 = call i32 @L2CAP_TRACE_WARNING(i8* getelementptr inbounds ([49 x i8], [49 x i8]* @.str.1, i64 0, i64 0), i8* %35)
  br label %37

37:                                               ; preds = %34, %24
  %38 = load i32, i32* @L2C_BLE_UPDATE_PENDING, align 4
  %39 = xor i32 %38, -1
  %40 = load %struct.TYPE_7__*, %struct.TYPE_7__** %11, align 8
  %41 = getelementptr inbounds %struct.TYPE_7__, %struct.TYPE_7__* %40, i32 0, i32 0
  %42 = load i32, i32* %41, align 8
  %43 = and i32 %42, %39
  store i32 %43, i32* %41, align 8
  %44 = load i32, i32* @L2C_BLE_UPDATE_PARAM_FULL, align 4
  %45 = xor i32 %44, -1
  %46 = load %struct.TYPE_7__*, %struct.TYPE_7__** %11, align 8
  %47 = getelementptr inbounds %struct.TYPE_7__, %struct.TYPE_7__* %46, i32 0, i32 0
  %48 = load i32, i32* %47, align 8
  %49 = and i32 %48, %45
  store i32 %49, i32* %47, align 8
  %50 = load %struct.TYPE_7__*, %struct.TYPE_7__** %11, align 8
  %51 = getelementptr inbounds %struct.TYPE_7__, %struct.TYPE_7__* %50, i32 0, i32 2
  %52 = call i32 @btu_stop_timer(i32* %51)
  %53 = load i32*, i32** getelementptr inbounds (%struct.TYPE_8__, %struct.TYPE_8__* @conn_param_update_cb, i32 0, i32 0), align 8
  %54 = icmp ne i32* %53, null
  br i1 %54, label %55, label %59

55:                                               ; preds = %37
  %56 = load %struct.TYPE_7__*, %struct.TYPE_7__** %11, align 8
  %57 = load i8*, i8** %7, align 8
  %58 = call i32 @l2c_send_update_conn_params_cb(%struct.TYPE_7__* %56, i8* %57)
  br label %59

59:                                               ; preds = %55, %37
  %60 = load %struct.TYPE_7__*, %struct.TYPE_7__** %11, align 8
  %61 = call i64 @l2cble_start_conn_update(%struct.TYPE_7__* %60)
  %62 = load i64, i64* @TRUE, align 8
  %63 = icmp eq i64 %61, %62
  br i1 %63, label %64, label %72

64:                                               ; preds = %59
  %65 = load %struct.TYPE_7__*, %struct.TYPE_7__** %11, align 8
  %66 = call i32 @CalConnectParamTimeout(%struct.TYPE_7__* %65)
  store i32 %66, i32* %12, align 4
  %67 = load %struct.TYPE_7__*, %struct.TYPE_7__** %11, align 8
  %68 = getelementptr inbounds %struct.TYPE_7__, %struct.TYPE_7__* %67, i32 0, i32 2
  %69 = load i32, i32* @BTU_TTYPE_L2CAP_UPDA_CONN_PARAMS, align 4
  %70 = load i32, i32* %12, align 4
  %71 = call i32 @btu_start_timer(i32* %68, i32 %69, i32 %70)
  br label %72

72:                                               ; preds = %64, %59
  %73 = load %struct.TYPE_7__*, %struct.TYPE_7__** %11, align 8
  %74 = getelementptr inbounds %struct.TYPE_7__, %struct.TYPE_7__* %73, i32 0, i32 1
  %75 = call i32 @btu_stop_timer(i32* %74)
  %76 = load %struct.TYPE_7__*, %struct.TYPE_7__** %11, align 8
  %77 = getelementptr inbounds %struct.TYPE_7__, %struct.TYPE_7__* %76, i32 0, i32 0
  %78 = load i32, i32* %77, align 8
  %79 = call i32 @L2CAP_TRACE_DEBUG(i8* getelementptr inbounds ([52 x i8], [52 x i8]* @.str.2, i64 0, i64 0), i32 %78)
  br label %80

80:                                               ; preds = %72, %17
  ret void
}

declare dso_local %struct.TYPE_7__* @l2cu_find_lcb_by_handle(i8*) #1

declare dso_local i32 @L2CAP_TRACE_WARNING(i8*, i8*) #1

declare dso_local i32 @btu_stop_timer(i32*) #1

declare dso_local i32 @l2c_send_update_conn_params_cb(%struct.TYPE_7__*, i8*) #1

declare dso_local i64 @l2cble_start_conn_update(%struct.TYPE_7__*) #1

declare dso_local i32 @CalConnectParamTimeout(%struct.TYPE_7__*) #1

declare dso_local i32 @btu_start_timer(i32*, i32, i32) #1

declare dso_local i32 @L2CAP_TRACE_DEBUG(i8*, i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
